--- a/app/src/main/res/layout/activity_cma.xml
+++ b/app/src/main/res/layout/activity_cma.xml
@@ -24,8 +24,18 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/email_geral_cm_amadora_pt"
+        android:textSize="20sp"
         android:id="@+id/textView4"
-        android:layout_marginTop="87dp"
+        android:layout_marginTop="85dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/fax_219_146_129"
+        android:id="@+id/textView5"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+    </RelativeLayout>
