--- a/app/src/main/res/layout/activity_escola.xml
+++ b/app/src/main/res/layout/activity_escola.xml
@@ -7,35 +7,46 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="usuario.app.testarmenu.Activity_ng">
+    tools:context="usuario.app.testarmenu.Activity_escola">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tel_214_213_262"
-        android:id="@+id/textView5"
-        android:layout_above="@+id/textView6"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="70dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/fax_214_213_929"
-        android:id="@+id/textView6"
-        android:layout_centerVertical="true"
+        android:text="@string/tel_esma"
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/email_info_novageo_com"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/textView6"
+        android:text="@string/fax_esma"
+        android:id="@+id/textView8"
+        android:layout_marginTop="108dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/email_geral_aeams_pt"
+        android:id="@+id/textView1"
+        android:layout_marginBottom="57dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/site_www_aeams_pt"
+        android:id="@+id/textView19"
+        android:layout_above="@+id/textView1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp" />
+        android:layout_marginBottom="99dp" />
 
 </RelativeLayout>
