--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,12 +41,18 @@
                         app:headerLayout="@layout/nav_header_main"
                         app:menu="@menu/activity_main_drawer" />
 
+
+
     </android.support.v4.widget.DrawerLayout>
 
     <TextView
+        android:id="@+id/powered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableRight="@drawable/novageo_trans"
         android:text="@string/powered_by_novageo"
+        android:textAlignment="gravity"
+        android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
