--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -16,4 +16,11 @@
         android:orderInCategory="3"
         android:title="@string/contatos_novageo"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_contacto3"
+        android:orderInCategory="4"
+        android:title="@string/escola_secund_ria_matias_aires"
+        app:showAsAction="never" />
+
 </menu>
