--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -15,9 +15,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/v0_2_niugis_viewer"
         android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp" />
+        android:textSize="18dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,6 +25,17 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/fonte_google_street_view"
         android:id="@+id/textView8"
-        android:layout_centerVertical="true"
+        android:textSize="18dp"
+        android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:src="@drawable/logo"
+        android:adjustViewBounds = "true"
+        android:layout_above="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="64dp" />
 </RelativeLayout>
