--- a/app/src/main/res/layout/activity_cma.xml
+++ b/app/src/main/res/layout/activity_cma.xml
@@ -15,8 +15,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tel_214_369_000"
         android:id="@+id/textView3"
-        android:layout_marginBottom="114dp"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -26,8 +25,7 @@
         android:text="@string/email_geral_cm_amadora_pt"
         android:textSize="20sp"
         android:id="@+id/textView4"
-        android:layout_marginTop="85dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -36,6 +34,16 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/fax_219_146_129"
         android:id="@+id/textView5"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView2"
+        android:src="@mipmap/icon"
+        android:adjustViewBounds = "true"
+        android:layout_marginTop="38dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
