--- a/app/src/main/res/layout/activity_escola.xml
+++ b/app/src/main/res/layout/activity_escola.xml
@@ -9,34 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="usuario.app.testarmenu.Activity_escola">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tel_esma"
-        android:id="@+id/textView2"
+
+
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="110dp"
+        android:scaleType="fitXY"
+        android:id="@+id/imageView3"
+        android:src="@drawable/transferir"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/fax_esma"
-        android:id="@+id/textView8"
-        android:layout_marginTop="108dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/email_geral_aeams_pt"
-        android:id="@+id/textView1"
-        android:layout_marginBottom="57dp"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -45,8 +27,27 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/site_www_aeams_pt"
         android:id="@+id/textView19"
-        android:layout_above="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="99dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/email_geral_aeams_pt"
+        android:id="@+id/textView1"
+        android:layout_below="@+id/textView19"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/tel_esma"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
