--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,14 +6,14 @@
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
         android:src="@mipmap/logo"
         android:nestedScrollingEnabled="false"
         android:scaleType="fitXY"
+        android:layout_marginTop="61dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="105dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/powered"
@@ -27,6 +27,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView6"
+        android:src="@drawable/transferir"
+        android:layout_below="@+id/imgLogo"
+        android:layout_alignLeft="@+id/imgLogo"
+        android:layout_alignStart="@+id/imgLogo"
+        android:layout_marginTop="72dp" />
 
 
 </RelativeLayout>
