--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,7 +19,7 @@
         android:id="@+id/powered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableRight="@drawable/novageo_trans"
+        android:drawableRight="@mipmap/novageo_trans"
         android:text="@string/powered_by_novageo"
         android:textAlignment="gravity"
         android:gravity="center"
@@ -31,7 +31,7 @@
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:id="@+id/imageView6"
-        android:src="@drawable/transferir"
+        android:src="@mipmap/transferir"
         android:layout_below="@+id/imgLogo"
         android:layout_alignLeft="@+id/imgLogo"
         android:layout_alignStart="@+id/imgLogo"
