--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -33,7 +33,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/imageView4"
-        android:src="@drawable/logo"
+        android:src="@mipmap/logo"
         android:adjustViewBounds = "true"
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true"
