--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:id="@+id/powered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableRight="@drawable/novageo_trans"
+        android:drawableRight="@mipmap/novageo_trans"
         android:text="@string/powered_by_novageo"
         android:textAlignment="gravity"
         android:gravity="center"
