--- a/app/src/main/res/layout/activity_ng.xml
+++ b/app/src/main/res/layout/activity_ng.xml
@@ -32,7 +32,7 @@
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:id="@+id/imageView5"
-        android:src="@drawable/novageo_trans"
+        android:src="@mipmap/novageo_trans"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
