--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -16,4 +16,9 @@
         android:orderInCategory="3"
         android:title="@string/contatos_novageo"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_contacto3"
+        android:orderInCategory="3"
+        android:title="Escola Secundaria Matias Aires"
+        app:showAsAction="never" />
 </menu>
