--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,12 +30,12 @@
         android:layout_centerHorizontal="true" />
 
     <ImageView
-        android:layout_width="200dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:id="@+id/imageView4"
         android:src="@mipmap/logo"
         android:adjustViewBounds = "true"
-        android:layout_above="@+id/textView2"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="64dp" />
+        android:layout_marginTop="63dp" />
 </RelativeLayout>
