--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,28 +9,24 @@
 
 
     <group xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:checkableBehavior="all">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
         <item
             android:id="@+id/Alllayers"
             android:checkable="true"
-            android:checked="true"
             android:title="Layers"
             app:showAsAction="never" />
 
         <item
             android:id="@+id/edificios"
             android:checkable="true"
-            android:checked="true"
             android:title="Edificios"
             app:showAsAction="never" />
-<!--
+
         <item
             android:id="@+id/vias"
             android:checkable="true"
-            android:checked="true"
             android:title="Vias"
-            app:showAsAction="never" />-->
+            app:showAsAction="never" />
 
     </group>
 
