alteração do nome do projeto

--- a/app/src/main/res/layout/activity_cma.xml
+++ b/app/src/main/res/layout/activity_cma.xml
@@ -7,13 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="usuario.app.testarmenu.Activity_cma">
+    tools:context="pt.novageo.niugisviewer.Activity_cma">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tel_214_369_000"
+        android:text="@string/tel_CMA"
         android:id="@+id/textView3"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
