--- a/app/src/main/res/layout/activity_ng.xml
+++ b/app/src/main/res/layout/activity_ng.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="usuario.app.testarmenu.Activity_ng">
+    tools:context="pt.novageo.niugisviewer.Activity_ng">
 
     <TextView
         android:layout_width="wrap_content"
