--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableRight="@mipmap/novageo_trans"
-        android:text="@string/powered_by_novageo"
+        android:text="@string/powered_novageo"
         android:textAlignment="gravity"
         android:gravity="center"
         android:layout_alignParentBottom="true"
