--- a/app/src/main/res/layout/activity_ponto.xml
+++ b/app/src/main/res/layout/activity_ponto.xml
@@ -7,14 +7,14 @@
         android:id="@+id/btnadd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="39dp"
-        android:layout_marginStart="39dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/inserirnome"
+        android:layout_marginLeft="42dp"
+        android:layout_marginStart="42dp"
         android:layout_marginTop="24dp"
         android:onClick="addButtonClicked"
-        android:text="add"
-        android:layout_below="@+id/inserirnome"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="add" />
 
     <Button
         android:id="@+id/btndel"
