--- a/app/src/main/res/layout/activity_ponto.xml
+++ b/app/src/main/res/layout/activity_ponto.xml
@@ -7,36 +7,35 @@
         android:id="@+id/btnadd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/inserirnome"
-        android:layout_marginLeft="42dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginLeft="51dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="27dp"
         android:onClick="addButtonClicked"
-        android:text="add" />
+        android:text="add"
+        android:layout_below="@+id/inserirdesc"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btndel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView12"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="42dp"
-        android:layout_marginRight="42dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginRight="46dp"
         android:onClick="deleteButtonClcked"
-        android:text="del" />
+        android:text="del"
+        android:layout_above="@+id/textView12"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:id="@+id/inserirnome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView12"
@@ -45,4 +44,36 @@
         android:layout_below="@+id/btnadd"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp" />
+
+    <EditText
+        android:id="@+id/inserirdesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/inserirnome"
+        android:layout_alignLeft="@+id/inserirnome"
+        android:layout_alignStart="@+id/inserirnome" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/Nome_do_ponto"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/inserirnome"
+        android:layout_alignStart="@+id/inserirnome" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/inserirdesc"
+        android:layout_alignStart="@+id/inserirdesc"
+        android:layout_below="@+id/inserirnome"
+        android:layout_marginTop="11dp"
+        android:text="@string/descri_o" />
+
 </RelativeLayout>
