commit j - update BD

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,8 +9,8 @@
             android:title="@string/mudar_mapa" />
 
         <item
-            android:id="@+id/action_add"
-            android:title="@string/sql_teste" />
+            android:id="@+id/action_view"
+            android:title="@string/pontos" />
     </group>
 
     <group xmlns:android="http://schemas.android.com/apk/res/android"
