--- a/app/src/main/res/layout/activity_ponto.xml
+++ b/app/src/main/res/layout/activity_ponto.xml
@@ -7,26 +7,22 @@
         android:id="@+id/btnadd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="51dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="32dp"
         android:onClick="addButtonClicked"
         android:text="add"
         android:layout_below="@+id/inserirdesc"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/button"
+        android:layout_toStartOf="@+id/button" />
 
     <Button
         android:id="@+id/btndel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="46dp"
-        android:layout_marginRight="46dp"
         android:onClick="deleteButtonClcked"
         android:text="del"
         android:layout_above="@+id/textView12"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button" />
 
     <EditText
         android:id="@+id/inserirnome"
@@ -36,14 +32,6 @@
         android:inputType="textPersonName"
         android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnadd"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp" />
 
     <EditText
         android:id="@+id/inserirdesc"
@@ -55,6 +43,14 @@
         android:layout_below="@+id/inserirnome"
         android:layout_alignLeft="@+id/inserirnome"
         android:layout_alignStart="@+id/inserirnome" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnadd"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp" />
 
     <TextView
         android:id="@+id/textView6"
@@ -76,4 +72,13 @@
         android:layout_marginTop="11dp"
         android:text="@string/descri_o" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="deleteButtonClcked"
+        android:text="@string/verificar"
+        android:layout_alignBaseline="@+id/btnadd"
+        android:layout_alignBottom="@+id/btnadd"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
