--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
 
         <item
             android:id="@+id/action_view"
-            android:title="@string/pontos" />
+            android:title="@string/verificar" />
     </group>
 
     <group xmlns:android="http://schemas.android.com/apk/res/android"
