--- a/app/src/main/res/layout/activity_inf.xml
+++ b/app/src/main/res/layout/activity_inf.xml
@@ -28,7 +28,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:text="Descrição: "
         android:id="@+id/textView14"
         android:textSize="15sp"
@@ -49,7 +49,7 @@
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:text="Coordenadas: "
         android:textSize="15sp"
         android:layout_below="@+id/textView14"
@@ -84,6 +84,24 @@
         android:layout_toRightOf="@+id/textView16"
         android:textSize="15sp"/>
 
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data de criação: "
+        android:layout_below="@+id/textLng"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="12dp" />
+
+    <TextView
+        android:id="@+id/textData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView11"
+        android:layout_toEndOf="@+id/textView11"
+        android:layout_toRightOf="@+id/textView11" />
+
     <Button
         android:id="@+id/btnMudar"
         android:layout_width="wrap_content"
@@ -103,8 +121,10 @@
         android:layout_height="wrap_content"
         android:onClick="DeleteOnClick"
         android:text="Delete"
-        android:layout_marginTop="150dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/textView9"
+        android:layout_toEndOf="@+id/textView9" />
 
-        android:layout_marginStart="50dp" />
+
 
 </RelativeLayout>
