--- a/app/src/main/res/layout/activity_inf.xml
+++ b/app/src/main/res/layout/activity_inf.xml
@@ -91,8 +91,7 @@
         android:text="Data de criação: "
         android:layout_below="@+id/textLng"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textData"
@@ -101,6 +100,24 @@
         android:layout_alignBottom="@+id/textView11"
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView11"
+        android:layout_marginTop="24dp"
+        android:text="Morada: " />
+
+    <TextView
+        android:id="@+id/textMorada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView15"
+        android:layout_toEndOf="@+id/textView15"
+        android:layout_toRightOf="@+id/textView15" />
 
     <Button
         android:id="@+id/btnMudar"
@@ -121,9 +138,11 @@
         android:layout_height="wrap_content"
         android:onClick="DeleteOnClick"
         android:text="Delete"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/textView9"
-        android:layout_toEndOf="@+id/textView9" />
+        android:layout_marginBottom="147dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 
 
