--- a/app/src/main/res/layout/activity_inf.xml
+++ b/app/src/main/res/layout/activity_inf.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -138,12 +139,22 @@
         android:layout_height="wrap_content"
         android:onClick="DeleteOnClick"
         android:text="Delete"
-        android:layout_marginBottom="147dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="34dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="61dp" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="38dp"
+        app:srcCompat="@mipmap/ponto"
+        android:layout_below="@+id/textView15"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-
 
 
 </RelativeLayout>
